# su2fmt

./: .gitignore  Makefile  README.md  pyproject.toml  requirements_dev.txt  setup.py
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: pypi-publish.yml  python-test.yml
examples/: onera_wing.ipynb
su2fmt/: __init__.py  exporter.py  generator.py  mesh.py  parser.py  types.py  utils.py  visualizer.py
tests/: su2mesh_test.py  test_su2mesh.py
